Backend deployed passing proper cookie

--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,7 @@
   }
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /*_________Characters Menu_________*/
-.characteraArea {
+.charactersArea {
   min-height: 96vh;
 }
 /*____________FINISH_____________*/
