--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,23 @@
 /*_________Characters Menu_________*/
 .charactersArea {
   min-height: 96vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.cardArea {
+  border: 1px solid red;
+  width: 100%;
+  height: 45rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: .5rem;
+  gap: 1rem;
+  row-gap: 1rem;
+}
+
+
 /*____________FINISH_____________*/
 
 
