--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap');
 
 * {
-
   --background-color: rgb(14,17,17);
   --menu-color: rgb(35,43,43);
   --text-color: rgb(209, 206, 206);
@@ -10,7 +9,6 @@
   padding: 0;
   border: 0;
   font-family: var(--text-font);
-  
 }
 :root{
   background-image: url("https://static.wixstatic.com/media/8ee8bf_b6a98a5db36243079b88938d3f5bf20b~mv2.jpg");
@@ -19,7 +17,6 @@
   background-size: cover;
   background-color: black;
   background-attachment:fixed;
-
 }
 .hidden {
   display: none !important;
@@ -36,7 +33,6 @@
   position: fixed;
   top: 0;
 }
-
 #hamburgerMenuButton {
   background-color: inherit;
   color: white;
@@ -44,37 +40,30 @@
   right: 0;
   top: 0;
 }
-
 .navigation .options {
   display: flex;
   justify-content: space-around;
   padding-bottom: .25rem;
   background-color: var(--menu-color);
 }
-
 .dropdownMenu a{
   color: inherit;
   text-decoration: none;
 }
-
 .dropdownMenu button{
   background-color: inherit;
   color: inherit;
   font-size: inherit;
 }
-
 .dropdownMenu button:hover{
   cursor: pointer;
 }
-
 .dropdownMenu{
   text-align: center;
 }
-
 .dropdownMenu h1 {
   font-size: 2rem;
   padding: 0 .75rem;
-
 }
 /*____________FINISH_____________*/
 
@@ -85,7 +74,6 @@
   justify-content: center;
   align-items: center;
 }
-
 .registrationArea {
   background-color: var(--menu-color);
   border-radius: 1rem;
@@ -93,7 +81,6 @@
   width: 20rem;
   box-shadow: 0px 0px 100px #fff;
 }
-
 .registrationArea h1 {
   background-color: var(--text-color);
   color: white;
@@ -104,7 +91,6 @@
   -webkit-text-stroke-color: black;
   margin-bottom: 1rem;
 }
-
 .registrationForm form{
   color: var(--text-color);
   height: 15rem;
@@ -114,7 +100,6 @@
   font-size: 1.6rem;
   justify-content: space-around;
 }
-
 .registrationForm input{
   font-size: 1.1rem;
   height: 1.5rem;
@@ -125,14 +110,11 @@
   color: white;
   padding: .3rem;
 }
-
 .buttonSection {
   display: flex;
   justify-content: space-around;
   width: 100%;
-
 }
-
 .buttonSection a{
   display: flex;
   justify-content: space-around;
@@ -145,19 +127,15 @@
   border-radius: 1rem;
   transition: 500ms;
 }
-
 .registrationForm button:hover{
   font-size: 1.25rem;
   transition: 500ms;
 }
-
 /*____________FINISH_____________*/
 /* Sign Up Page */
-
   .signupPage form{
     height: 17rem;
   }
-
   .signupPage .registrationArea {
     height: 22rem;
   }
@@ -172,7 +150,6 @@
   justify-content: center;
   align-items: center;
 }
-
 .cardArea {
   width: 100%;
   height: 45rem;
@@ -183,23 +160,17 @@
   row-gap: 1rem;
   text-align: end;
 }
-
 .characterCardArea{
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 1rem;
   text-align: center;
   margin-bottom: 1rem;
   margin-top: 1rem;
-
 }
-
 .characterCardArea img {
   max-width: 70%;
   max-height: 15rem;
 }
-
-
-
 .characterCardArea button, .cardArea button {
   font-size: 2rem;
   padding: .2rem 1rem;
@@ -211,16 +182,13 @@
 .cardArea button {
   font-size: 1.25rem;
 }
-
 .characterCardArea h1 {
   background-color: var(--background-color);
   color: var(--text-color);
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   margin-bottom: 1rem;
-
 }
-
 .cardDetails {
   background-color: var(--text-color);
   color: var(--background-color);
@@ -235,9 +203,14 @@
 .details{
   font-size: 1.7rem;
 }
-
 /*____________FINISH_____________*/
 
+/*_________New Character Screen_________*/
+
+
+
+
+/*____________FINISH_____________*/
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /*  Properties Large Phones / Tablets */
