--- a/src/App.css
+++ b/src/App.css
@@ -166,6 +166,8 @@
   text-align: center;
   margin-bottom: 1rem;
   margin-top: 1rem;
+  max-width: 30rem;
+
 }
 .characterCardArea img {
   max-width: 70%;
@@ -181,6 +183,8 @@
 }
 .cardArea button {
   font-size: 1.25rem;
+  margin-top: 1rem;
+
 }
 .characterCardArea h1 {
   background-color: var(--background-color);
@@ -265,6 +269,21 @@
 @media (min-width: 43rem) {
   .landingPage {
     min-height: 95vh;
+  }
+
+  .cardArea {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .cardArea a {
+    grid-column: span 2;
+    justify-self: center;
+    margin-top: 1rem;
+  }
+
+  .characterCardArea {
+    justify-self: center;
+    min-width: 25rem;
   }
 
 }
