--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   border-bottom-right-radius: .5rem;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 #hamburgerMenuButton {
   background-color: inherit;
