--- a/src/App.css
+++ b/src/App.css
@@ -293,6 +293,22 @@
 
 /*____________FINISH_____________*/
 
+/*_________Play Page Menu_________*/
+.playArea {
+  border: 1px solid red;
+  height: 98vh;
+  padding-top: 2.1rem;
+}
+
+.homeScreen{
+  border: 1px solid red;
+  margin-top: 3rem;
+  height: 30rem;
+}
+
+/*____________FINISH_____________*/
+
+
 /*_________Error Screen_________*/
 
 .error{
