--- a/src/App.css
+++ b/src/App.css
@@ -295,7 +295,6 @@
 
 /*_________Play Page Menu_________*/
 .playArea {
-  border: 1px solid red;
   height: 98vh;
   padding-top: 2.1rem;
 }
@@ -303,7 +302,25 @@
 .homeScreen{
   border: 1px solid red;
   margin-top: 3rem;
-  height: 30rem;
+  /* height: 40rem; */
+}
+
+.displayArea{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: center;
+  background-color: tan;
+  align-items: center;
+  padding: 1rem 0;
+}
+.displayArea h1{
+  grid-column: span 3;
+  margin-bottom: 1rem;
+  
+}
+
+.displayArea img{
+  max-height: 10rem;
 }
 
 /*____________FINISH_____________*/
