details of game information object created

--- a/src/App.css
+++ b/src/App.css
@@ -336,7 +336,7 @@
 .messageArea{
   text-align: center;
   height: 8rem;
-  background-color: #a67c00;
+  background-color: #7e5e00;
   color: white;
   display: flex;
   justify-content: center;
