store page style tweaked

--- a/src/App.css
+++ b/src/App.css
@@ -396,6 +396,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  padding-bottom: 1rem;
 }
 .storeDisplay img{
   max-width: 6rem;
