--- a/src/App.css
+++ b/src/App.css
@@ -400,7 +400,8 @@
 }
 .storeDisplay img{
   max-width: 6rem;
-  margin-top: 1.5rem;
+  max-height: 5rem;
+  margin-top: 1rem;
 }
 
 .shelf{
@@ -464,11 +465,15 @@
     width: 45rem;
   }
 
-
   .billboard{
     padding-top: 7rem;
     padding-bottom: 3.5rem;
   }
+    .storeDisplay img{
+      max-width: 7rem;
+      max-height: 6rem;
+      margin-top: 1rem;
+    }
 }
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /*  Laptops and small monitors */
