--- a/src/App.css
+++ b/src/App.css
@@ -421,6 +421,29 @@
   border-radius: 5px;
 }
 
+.storeOptions{
+  display: flex;
+  justify-content: space-around;
+}
+.storeOptions button{
+  margin: 1rem 0;
+  padding: 1rem;
+  min-width: 40%;
+  /*  */
+  background-color: #ffbf00;
+  font-size: 1rem;
+}
+
+.storeOptions button:nth-of-type(1){
+  border-radius: 2rem 0 2rem 0;
+  box-shadow: 1px 1px 3px 0px black;
+}
+
+.storeOptions button:nth-of-type(2){
+  border-radius: 0 2rem 0 2rem;
+  box-shadow: 0px 2px 3px 0px black;
+}
+
 /*____________FINISH_____________*/
 /*_________Error Screen_________*/
 
