--- a/src/App.css
+++ b/src/App.css
@@ -468,6 +468,12 @@
   width: 100%;
   height: 30rem;
   margin-bottom: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.itemSection img {
+  width: 5rem;
 }
 
 
