--- a/src/App.css
+++ b/src/App.css
@@ -468,10 +468,14 @@
   width: 100%;
   height: 30rem;
   margin-bottom: 1rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+
 }
 
+.itemArea{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 15rem 2rem 0 2rem;
+}
 .itemSection img {
   width: 5rem;
 }
