--- a/src/App.css
+++ b/src/App.css
@@ -477,7 +477,8 @@
   padding: 15rem 2rem 0 2rem;
 }
 .itemSection img {
-  width: 5rem;
+  max-width: 6rem;
+  max-height: 5rem;
 }
 
 
@@ -536,6 +537,13 @@
     max-width: 7rem;
     max-height: 6rem;
     margin-top: 1rem;
+  }
+  .itemSection{
+    display: grid;
+  }
+  .itemArea {
+    grid-template-columns: 8rem 8rem 8rem 8rem;
+    justify-self: center;
   }
 }
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
