--- a/src/App.css
+++ b/src/App.css
@@ -468,13 +468,31 @@
   width: 100%;
   height: 30rem;
   margin-bottom: 1rem;
+  
 
 }
 
-.itemArea{
+.statsInventoryScreen {
+  display: flex;
+  justify-content: space-around;
+  font-size: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 5.5rem;
+  padding-top: 5.5rem;
+}
+
+.itemArea {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 15rem 2rem 0 2rem;
+  
+  height: 14.5rem;
+}
+.inventoryItems{
+  display: grid;
+  grid-template-columns: 5.5rem 5.5rem 5.5rem;
+  justify-self: center;
+  overflow-y: scroll;
+  
+  /* padding: 15rem 2rem 0 2rem; */
 }
 .itemSection img {
   max-width: 5rem;
@@ -541,7 +559,7 @@
   .itemSection{
     display: grid;
   }
-  .itemArea {
+  .inventoryItems {
     grid-template-columns: 8rem 8rem 8rem 8rem;
     justify-self: center;
   }
