created one function to give images

--- a/src/App.css
+++ b/src/App.css
@@ -505,7 +505,7 @@
 /*_________Fight Screen_________*/
 
 .fightDisplay {
-
+  background-color: var(--text-color);
 }
 
 /*____________FINISH_____________*/
