--- a/src/App_refactor.css
+++ b/src/App_refactor.css
@@ -23,6 +23,7 @@
   display: none !important;
 }
 
+
 /* NAVIGATION MENU MOBILE START */
 .navigation {
   width: 100%;
@@ -293,6 +294,77 @@
 }
 
 /*____________FINISH_____________*/
+
+.playArea{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2.3rem;
+}
+.displayArea, .messageArea, .gameOptionsArea, .storeDisplay, .storeItemArea, .inventoryDisplay, .fightDisplay{
+  width: 22rem;
+  height: 32rem;
+}
+/*_________Store Screen_________*/
+
+.billboard{
+  background-image: url("./assets/blank_store_sign.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 7rem;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+}
+.billboard h1{
+  margin-bottom: 1.1rem;
+  color: gold;
+}
+.storeItemArea {
+  background-image: url("./assets/storefront.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 22rem 25rem;
+  height: 25rem;
+}
+.storeDisplay img{
+  max-width: 6rem;
+  max-height: 5rem;
+}
+.shelf{
+  display: flex;
+  justify-content: space-evenly;
+}
+.shelf p{
+  background-image: url("./assets/blank_store_sign.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  color: gold;
+  border-radius: 5px;
+  text-align: center;
+  width: 5rem;
+}
+
+.shelf:nth-of-type(1){
+  padding-top: 2rem;
+}
+.shelf:nth-of-type(1) p{
+  margin-top: .6rem;
+  margin-bottom: 1.2rem;
+}
+.shelf:nth-of-type(2) p{
+  margin-top: .45rem;
+  margin-bottom: 1.2rem;
+}
+.shelf:nth-of-type(3) p{
+  margin-top: .5rem;
+}
+
+
+
+
+
 /*_________Error Screen_________*/
 
 .error{
@@ -331,60 +403,9 @@
     min-width: 25rem;
   }
 
-  .displayArea img{
-    max-height: 20rem;
-  }
-
   .displayArea, .messageArea, .gameOptionsArea, .storeDisplay, .storeItemArea, .inventoryDisplay, .fightDisplay{
     width: 45rem;
   }
-
-  .billboard{
-    padding-top: 7rem;
-    padding-bottom: 3.5rem;
-  }
-  .storeDisplay img{
-    max-width: 7rem;
-    max-height: 6rem;
-    margin-top: 1rem;
-  }
-  .itemSection{
-    display: grid;
-  }
-  .inventoryItems {
-    grid-template-columns: 7rem 7rem 7rem 7rem;
-    justify-self: center;
-    margin-right: 1.5rem;
-  }
-
-  .statsInventoryScreen {
-    font-size: 2rem;
-    margin-top: 0;
-  }
-
-  .inventoryItems::-webkit-scrollbar {
-    width: 10px; /* Adjust the width of the scrollbar */
-    
-  }
-
-  .inventoryItems::-webkit-scrollbar-thumb {
-    background-color: white; /* Color of the thumb */
-    border-radius: 1rem; /* Rounded corners */
-  }
-
-  .inventoryItems::-webkit-scrollbar-track {
-    background-color: rgb(134, 27, 27);
-    border-radius: 1rem;
-    max-height: 80%;
-  }
-  .inventoryItems::-webkit-scrollbar-track-piece {
-    height: 2rem;
-  }
-
-  .fightDisplay img {
-    max-width: 12rem;
-  }
-
 }
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 /*  Laptops and small monitors */
