--- a/src/App_refactor.css
+++ b/src/App_refactor.css
@@ -421,7 +421,6 @@
   height: 30rem;
   /* margin-bottom: 1rem; */
 }
-
 .statsInventoryScreen {
   display: flex;
   justify-content: space-around;
@@ -429,7 +428,6 @@
   padding-top: 5.5rem;
   margin-bottom: 7rem;
 }
-
 .itemArea {
   display: grid;
   height: 14.5rem;
@@ -447,6 +445,59 @@
 
 /*_________Finish_________*/
 
+  /* .storeDisplay, .storeItemArea, .inventoryDisplay, .fightDisplay{
+    width: 22rem;
+    height: 32rem;
+  }
+  .messageArea, .gameButtonArea {
+    width: 22rem;
+  } */
+
+/*_________Fight  Area_________*/
+
+.fightDisplay {
+  background: rgb(4,241,34);
+  background: linear-gradient(225deg, rgba(4,241,34,1) 2%, rgba(0,218,255,1) 62%);
+  color: black;
+}
+.fightDisplay img {
+  max-width: 9rem;
+}
+.enemyArea{
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  margin-right: 1rem;
+  margin-top: .5rem;
+}
+.userArea{
+  margin-left: 1rem;
+}
+.healthField{
+  display: flex; 
+}
+.healthField p{
+  color: #00000000;
+  border-top: solid black 2px;
+  border-bottom: solid black 2px;
+}
+.healthField p:first-child {
+  border-left: solid black 2px;
+}
+.healthField p:last-child {
+  border-right: solid black 2px;
+}
+.greenHealth{
+  background-color: rgb(0, 255, 0);
+}
+.yellowHealth{
+  background-color: yellow;
+}
+.redHealth{
+  background-color: red;
+}
+
+/*_________Finish_________*/
 
 /*_________Message Box Area_________*/
 .messageArea{
@@ -483,11 +534,13 @@
   border-right: .2rem solid rgb(189, 160, 1);
   border-bottom: .3rem solid rgb(189, 160, 1);
   background-color: #ffbf00;
+  font-size: 1rem;
 }
 
 /* Store Buttons */
 .storeOptions button, .inventoryOptions button{
     width: 8rem;
+    font-size: 1.5rem;
 }
 
 /*_________Finish_________*/
